[tool.poetry]
name = "snacks-crud"
version = "0.1.0"
description = ""
authors = ["doaa-1996 <doaaobeidat1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^3.2.5"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
